# echodaily

./: .gitignore  clear_today.py  docker-compose.yml  package-lock.json  package.json  project.config.json  project.private.config.json
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  tasks.py
backend/app/api/: dependencies.py
backend/app/api/routers/: __init__.py  assessments.py  auth.py  challenges.py  dashboard.py  health.py  lessons.py  profile.py
backend/app/core/: config.py  errors.py
backend/app/db/: models.py  seed.py  session.py
backend/app/integrations/: deepseek_daily_message_client.py  tencent_oral_evaluation_client.py  wechat_auth_client.py
backend/app/repositories/: assessment_repository.py  challenge_repository.py  daily_message_repository.py  lesson_repository.py  user_repository.py  user_session_repository.py
backend/app/schemas/: assessment.py  auth.py  challenge.py  dashboard.py  lesson.py  profile.py
backend/app/services/: assessment_service.py  auth_service.py  challenge_service.py  daily_message_service.py  dashboard_service.py  profile_service.py
backend/data/: test-echodaily.db
backend/tests/: test_api.py  test_lesson_repository.py  test_tencent_oral_evaluation_client.py
docker/postgres/: Dockerfile  docker-entrypoint.sh
docs/: mvp-deploy.md  operation.md  prd.md
miniprogram/: app.json  app.ts  app.wxss
miniprogram/types/: api.ts
skills/: api.md  backend.md  git-ship.md  performance.md  postgres.md  refactor.md
typings/: index.d.ts
(+23 files in other folders)
