[project]
name = "echodaily-backend"
version = "0.1.0"
description = "EchoDaily backend for the WeChat mini program."
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0,<0.22.0",
    "asyncpg>=0.30.0,<0.31.0",
    "fastapi>=0.116.0,<0.117.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "tencentcloud-sdk-python-common>=3.1.73",
    "tencentcloud-sdk-python-soe>=3.0.1459",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "ruff>=0.11.7,<0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
